--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,52 @@
+absl-py==2.3.1
 asgiref==3.10.0
-contourpy==1.3.2
+astunparse==1.6.3
+certifi==2025.11.12
+charset-normalizer==3.4.4
+contourpy==1.3.3
 cycler==0.12.1
 Django==5.2.7
-fonttools==4.58.0
-kiwisolver==1.4.8
-matplotlib==3.10.3
-numpy==2.2.1
+flatbuffers==25.9.23
+fonttools==4.60.1
+gast==0.6.0
+google-pasta==0.2.0
+grpcio==1.76.0
+gunicorn==23.0.0
+h5py==3.15.1
+idna==3.11
+keras==3.12.0
+kiwisolver==1.4.9
+libclang==18.1.1
+Markdown==3.10
+markdown-it-py==4.0.0
+MarkupSafe==3.0.3
+matplotlib==3.10.7
+mdurl==0.1.2
+ml_dtypes==0.5.3
+namex==0.1.0
+numpy==2.2.6
+opencv-python==4.12.0.88
+opt_einsum==3.4.0
+optree==0.17.0
 packaging==25.0
-pandas==2.2.3
-pillow==11.2.1
-pyparsing==3.2.3
+pillow==11.3.0
+protobuf==6.33.1
+Pygments==2.19.2
+pyparsing==3.2.5
 python-dateutil==2.9.0.post0
-pytz==2024.2
-scipy==1.15.3
-seaborn==0.13.2
+requests==2.32.5
+rich==14.2.0
+scipy==1.16.3
 setuptools==80.9.0
 six==1.17.0
 sqlparse==0.5.3
-stats==0.1.2a0
-tzdata==2024.2
+tensorboard==2.20.0
+tensorboard-data-server==0.7.2
+tensorflow==2.20.0
+termcolor==3.2.0
+typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.5.0
+Werkzeug==3.1.3
+wheel==0.45.1
+wrapt==2.0.1
